--- a/paper/article.tex
+++ b/paper/article.tex
@@ -519,7 +519,8 @@ The method based on the maximum of the circular velocity shows a similar
 behaviour $\avg{|D|}\propto N^{-1/2}$. Its accuracy is $2-5$ times less
 than in our method, on the order of $20\%$ for $20$ particle halos and
 $0.5\%$ for $20000$ particle halos. The method based on the direct density
-fit shows the an intermediate accuracy between the other two methods.
+fit shows the lowest accuracy for a low particle number and an intermediate
+accuracy between the other two methods for a high particle number.
 
 \subsection{Tests on N-body data}
 \label{sec:data}
