added plots about the impact of the input concentration

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -432,7 +432,7 @@ D=(c_{in}-c_{out})/c_{in}.
 
 \begin{figure}
 \begin{center}
-  \includegraphics[width=0.50\textwidth]{percentual_diff.pdf}
+  \includegraphics[width=0.50\textwidth]{mock_percentual_diff.pdf}
 \end{center}
 \caption{Cumulative distribution of the fractional difference, $D$, between
   the input concentration in the mock halo generator, $c_{in}$ and the
@@ -466,7 +466,32 @@ absent.
 
 \subsubsection{The impact of the input concentration}
 
-{\bf Hace falta hacer una figura para este caso.}
+\begin{figure}
+\begin{center}
+  \includegraphics[width=0.50\textwidth]{mock_percentual_diff_conc_20.pdf}
+\end{center}
+\caption{Cumulative distribution of the fractional difference, $D$, between
+  the input concentration in the mock halo generator, $c_{in}$ and the
+  measurement by our MCMC code, $c_{out}$. Each curve corresponds to
+  halos generated with an input concentration in a different range for
+  a number of particles $N=20$.
+    \label{fig:results_mocks_conc_20}}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+  \includegraphics[width=0.50\textwidth]{mock_percentual_diff_conc_20000.pdf}
+\end{center}
+\caption{Cumulative distribution of the fractional difference, $D$, between
+  the input concentration in the mock halo generator, $c_{in}$ and the
+  measurement by our MCMC code, $c_{out}$. Each curve corresponds to
+  halos generated with an input concentration in a different range for
+  a number of particles $N=20000$.
+    \label{fig:results_mocks_conc_20000}}
+\end{figure}
+
+
+{\bf Hace falta discutir las figuras.}
 
 \subsubsection{The impact of different methods}
 
