--- a/paper/article.tex
+++ b/paper/article.tex
@@ -41,6 +41,10 @@
 No. 18A-10, Edificio Ip, Bogot\'a, Colombia}
 \email{cn.poveda542@uniandes.edu.co}
 \email{je.forero@uniandes.edu.co}
+\author{Juan Carlos Mu\~noz-Cuartas}
+\affil{UdeA, Medell\'in, Colombia}
+\email{xxx@udea.edu.co}
+
 
 \keywords{ methods: numerical --- galaxies: halos --- cosmology: theory --- dark
 matter}
@@ -48,7 +52,7 @@ matter}
 
 We present a new method to estimate the concentration of dark matter
 halos in N-body simulations.
-Our method is based on a fit to the integrated mass as a function of
+Our method is based on a fit to the integrated mass profile as a function of
 halo radius.
 The main advantage of this method is that it uses the full particle information
 without any binning.
@@ -56,9 +60,13 @@ We test our method both on mock and N-body halos to compare it against
 two popular methods to find concentrations: maximum radial velocity
 measurements and radial particle binning to estimate the density.
 Tests on the mock halos show that the accuracy of our method to
-recover input concentrations can achieve $0.1\%$ while for the maximum
-radial velocity and density methods it is on the order of $0.5\%$ and
-$40\%$ respectively.
+recover input concentrations varies with the number of particles in
+the halo. For halos sampled with $20$ particles our method recovers
+the input concentration with $10\%$ accuracy, while for the maximum
+radial velocity and density methods the accuracy is on the order of $20\%$ and
+$100\%$, respectively. For halos samples with $10^4$ particles our
+method achieves an accuracy of $0.01\%$ while the velocity and density
+methods achieve $0.1\%$ and $1\%$ accuracy, respectively.
 We also measure the mass-concentration relationship on the N-body
 data.
 With respect to the other two approaches our method produces a
