--- a/paper/article.tex
+++ b/paper/article.tex
@@ -78,7 +78,7 @@ velocity method and above the density method.
 
 \section{Introduction}
 \label{sec:introduction}
-In the concordance cosmology paradigm the matter content of the
+In the concordance cosmology the matter content of the
 Universe is dominated by dark matter, a collisionless fluid shaped by
 gravitational interactions.
 In the last three decades numerical experiments have made possible the
@@ -474,29 +474,19 @@ absent.
 
 \subsubsection{The impact of the input concentration}
 
-\begin{figure}
-\begin{center}
-  \includegraphics[width=0.50\textwidth]{mock_percentual_diff_conc_20.pdf}
-\end{center}
-\caption{Cumulative distribution of the fractional difference, $D$, between
-  the input concentration in the mock halo generator, $c_{in}$ and the
-  measurement by our MCMC code, $c_{out}$. Each curve corresponds to
-  halos generated with an input concentration in a different range for
-  a number of particles $N=20$.
-    \label{fig:results_mocks_conc_20}}
-\end{figure}
+\begin{figure*}
 
-\begin{figure}
-\begin{center}
-  \includegraphics[width=0.50\textwidth]{mock_percentual_diff_conc_20000.pdf}
-\end{center}
+  \includegraphics[width=0.45\textwidth]{mock_percentual_diff_conc_20.pdf}
+  \includegraphics[width=0.45\textwidth]{mock_percentual_diff_conc_20000.pdf}
+
 \caption{Cumulative distribution of the fractional difference, $D$, between
   the input concentration in the mock halo generator, $c_{in}$ and the
   measurement by our MCMC code, $c_{out}$. Each curve corresponds to
   halos generated with an input concentration in a different range for
-  a number of particles $N=20000$.
-    \label{fig:results_mocks_conc_20000}}
-\end{figure}
+  a number of particles $N=20$ (right panel) and $N=20000$ (left panel).
+    \label{fig:results_mocks_conc_20}}
+\end{figure*}
+
 
 
 {\bf Hace falta discutir las figuras.}
