revised 3 paragraphs in the intro

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -78,36 +78,38 @@ velocity method and above the density method.
 
 \section{Introduction}
 \label{sec:introduction}
-In the concordance cosmology the matter content of the
+In the concordance cosmology paradigm the matter content of the
 Universe is dominated by dark matter, a collisionless fluid shaped by
 gravitational interactions.
-In the last three decades numerical experiments have made possible the
-simulation of dark matter dominated universes, yielding valuable
-insights on the large scale structure formation process.
-This description shows a remarkable success in comparisons against
-observations of galaxy distributions on large scales
+Simulations of dark matter dominated universes during the last three
+decades have provided valuable insights into the large scale structure
+formation process, showing a remarkable success when theoretical
+results are compared against observations of the galaxy distribution
+obtained from large surveys.
 \citep{Springel2005,2011ApJ...740..102K}.
 
-Regarding the small scale dark matter distribution, one of the most
-striking results of these simulations is that dark matter overdensities
-follow a universal density profile.
+On galactic scales the most striking results of these simulations is
+that dark matter overdensities closely follow a universal density
+profile. 
 In a first approximation this profile is spherically symmetric and its
 density only dependens on the radial coordinate.
 The universality of this profiles seems to be independent of the
-cosmological parameters and self-similar for different spatial scales
-after an adequate re-scaling is applied.
+cosmological parameters and is self-similar for different spatial
+scales after an adequate re-scaling is applied. 
 \citep{NFW,Taylor2001}
 
 One the most popular parameterization for a halo radial density
 distribution is known as the Navarro-Frenk-White (NFW) profile
 \citep{NFW}.
-This profile is a  double power law in radius, where the transition
-between the two happens at the so-called scale radius $r_s$.
-The ratio between the scale radius and the virial radius of the halo
-$R_v$ is known as the concentration $c=R_v/r_s$.
-Simulations also show that the concentration is a function of halo
-mass.
+This profile is a  double power law in radius, where the transition break
+happens at the so-called scale radius $r_s$.
+The ratio between the scale radius and the virial radius, $R_v$ which
+defines a natural scale for the halo, is known as the concentration
+$c=R_v/r_s$. 
+Simulations show that the concentration is a strong function of halo mass and
+redshift. 
 
+%%%
 
 High resolution simulations of Milky Way sized dark matter halos
 \citep{Navarro2010} show that the universality property is not
