starting to write the conclusions

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -612,6 +612,26 @@ values in the simulated halos from the three different methods.
 \section{Conclusions}
 \label{sec:conclusions}
 
+In this paper, we presented a new method to estimate the
+concentration of dark matter halos in N-body simulations. 
+We tested our method on mock halo data to study the impact of total
+number of particles and input concentration on the retrieved values.
+We compared these results against two other methods commonly used in
+the literature to estimate concentrations.
+Finally, we applied our method to halos extracted from a cosmological
+N-body simulation to estimate the impact of our method on the mass
+concentration relationship. 
+
+Comparison against other methods.\\
+
+The effect of the number of particles.\\
+
+The effect of the input concentration.\\
+
+The impact on the mass-concentration relationship.\\
+
+Comment and future.\\
+
 
 
 \bibliography{references}
